samples/_failures_safe/1761505670_dbec5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c49e2fb9.c: In function ‘main’:
./samples/SAFE/__tmp_c49e2fb9.c:176:5: error: expected declaration or statement at end of input
  176 |     printf("----------------\n");
      |     ^~~~~~
